# bookshelf

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
.claude/agents/: code-reviewer.md  db-seeder.md  docker-expert.md  fastapi-expert.md  react-expert.md  swagger-documenter.md
.claude/skills/commit/: SKILL.md
.claude/skills/issue/: SKILL.md
.claude/skills/test-back/: SKILL.md
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 40dad4404cae_create_favourite_lists_tables.py  e470376bb059_create_users_table.py  ef29b2bd937b_create_books_table.py  f16ee8143e9d_add_version_columns_for_optimistic_.py
backend/docs/: arquitectura-hexagonal.md  decision-stack-backend.md  restricciones-unicidad-sqlalchemy.md
backend/src/: __init__.py  main.py
backend/src/adapters/: __init__.py
backend/src/adapters/inbound/: __init__.py
backend/src/adapters/inbound/api/: auth_router.py  book_router.py  favourite_list_router.py  health_router.py
backend/src/adapters/inbound/middleware/: __init__.py  auth.py  error_handler.py
backend/src/adapters/inbound/schemas/: __init__.py  auth_schemas.py  book_schemas.py  common.py  favourite_schemas.py
backend/src/adapters/outbound/: __init__.py
backend/src/adapters/outbound/ai/: __init__.py
backend/src/adapters/outbound/persistence/: __init__.py  book_repository.py  database.py  favourite_list_repository.py  sqlalchemy_models.py  user_repository.py
backend/src/adapters/outbound/security/: __init__.py  jwt_token_service.py  password_hasher.py
backend/src/config/: __init__.py  container.py  settings.py
backend/src/domain/: __init__.py  exceptions.py
backend/src/domain/models/: __init__.py  book.py  favourite.py  user.py
backend/src/domain/ports/: __init__.py  repositories.py  services.py
backend/src/domain/services/: __init__.py  auth_service.py  book_service.py  favourite_list_service.py
backend/tests/: __init__.py  conftest.py  factories.py
backend/tests/api/: conftest.py  test_auth_endpoints.py  test_book_endpoints.py  test_cors.py  test_favourite_list_endpoints.py  test_health_endpoints.py
backend/tests/fakes/: __init__.py  fake_book_repository.py  fake_favourite_list_repository.py
backend/tests/integration/: conftest.py  test_book_repository.py  test_favourite_list_repository.py  test_optimistic_locking.py  test_user_repository.py
backend/tests/unit/: test_auth_service.py  test_bcrypt_password_hasher.py  test_book_service.py  test_common_schemas.py  test_error_handler.py  test_exceptions.py  test_favourite_list_service.py  test_jwt_token_service.py  test_settings.py
frontend/: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/app/: App.tsx  index.css  providers.tsx  router.tsx
frontend/src/app/pages/: AuthNavigation.test.tsx  DashboardPage.test.tsx  DashboardPage.tsx  HomePage.test.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.test.tsx  NotFoundPage.tsx  RegisterPage.tsx  UiComponentsPage.test.tsx  UiComponentsPage.tsx
frontend/src/components/layout/: Footer.test.tsx  Footer.tsx  Header.test.tsx  Header.tsx  Layout.tsx  MobileAccountDrawer.tsx  MobileActionBar.test.tsx  MobileActionBar.tsx  MobileTabBar.test.tsx  MobileTabBar.tsx  PageContainer.tsx  Sidebar.test.tsx  Sidebar.tsx
frontend/src/hooks/: useApi.ts  useDebounce.ts  useLocalStorage.ts  useToast.test.tsx  useToast.ts
frontend/src/lib/: api-client.ts
frontend/src/types/: api.ts
frontend/src/utils/: format-price.ts  get-initials.test.ts  get-initials.ts  validate-isbn.ts
infra/: README.md  docker-compose.yml
infra/postgres/init/: 01-pgvector.sql
(+40 files in other folders)
