[project]
name = "bookshelf-backend"
version = "0.1.0"
description = "BookShelf API — tienda de libros con IA (Hexagonal Architecture)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "structlog",
    "pgvector",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "pre-commit",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S"]
# UP046: keep typing.Generic instead of PEP 695 generic syntax,
# which is a 3.12-only feature we avoid for broader compatibility.
ignore = ["UP046"]

[tool.ruff.lint.per-file-ignores]
# S101: bandit forbids `assert`, but in pytest it IS the assertion tool.
"tests/**" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
